fixed spacing between gameboard and selection

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
   flex-direction: column;
   padding: 0;
   margin-top: 10px;
-  height: 200px;
+  height: 150px;
 }
 
 .game-board {
@@ -66,7 +66,6 @@ body {
 
 .vs-text {
   font-size: 25px;
-  flex-shrink: 0;
   max-height: 100px;
 }
 
